# parqbench

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  check.sh  icon.rc
.github/workflows/: release.yaml  rust.yml
docs/: index.html
src/: app.rs  args.rs  arguments.rs  components.rs  data.rs  formatters.rs  layout.rs  lib.rs  main.rs
